# ollama-blog-buddy

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: 1_🕟_Refresh_Data.py  BlogBuddy.py  app.py
app/app_pages/: chat.py  chat_async.py  data_refresh.py  settings.py
app/pages/: 1_🤖_Chat.py
app/prompts/: llama_prompt_v32.txt  rag_prompt_v2.txt  rag_prompt_v2_1.txt
app/utils/: bedrock_utils.py  blog_utils.py  groq_utils.py  lancedb_utils.py  llm_tools.py  ollama_utils.py
